Desktop align center. Mobile width fix. Few css optimization.

--- a/index.html
+++ b/index.html
@@ -26,40 +26,40 @@
 </div>
 </head>
 <body>  
-    <div class="backgroundDesktop">
-        <img class="rectangle5Desk" src="images/Desktop/Rectangle 5.png" alt="rectangle5" > 
-        <img class="rectangle1Desk" src="images/Desktop/Rectangle 1.png" alt="rectangle1" >
-        <img class="rectangle2Desk" src="images/Desktop/Rectangle 2.png" alt="rectangle2" >
-        <img class="rectangle7Desk" src="images/Desktop/Rectangle 7.png" alt="rectangle7" >
-        <img class="rectangle8Desk" src="images/Desktop/Rectangle 8.png" alt="rectangle8" >
-        <img class="rectangle9Desk" src="images/Desktop/Rectangle 9.png" alt="rectangle9" >
-        <img class="rectangle11Desk" src="images/Desktop/Rectangle 11.png" alt="rectangle11" >
-        <img class="rectangle14Desk" src="images/Desktop/Rectangle 14.png" alt="rectangle14" >
-        <img class="rectangle15Desk" src="images/Desktop/Rectangle 15.png" alt="rectangle15" >
-        <img class="rectangle16Desk" src="images/Desktop/Rectangle 16.png" alt="rectangle16" >
-        <img class="rectangle17Desk" src="images/Desktop/Rectangle 17.png" alt="rectangle17" >
-        <img class="rectangle18Desk" src="images/Desktop/Rectangle 18.png" alt="rectangle18" >
-        <img class="rectangle19Desk" src="images/Desktop/Rectangle 19-1.png" alt="rectangle19" >
-        <img class="rectangle192Desk" src="images/Desktop/Rectangle 19-2.png" alt="rectangle192" >
-        <img class="vector8Desk" src="images/Desktop/Vector 8.svg" alt="Vector8" >
-        <img class="vector9Desk" src="images/Desktop/Vector 9.svg" alt="Vector9" >
-        <img class="vector10Desk" src="images/Desktop/Vector 10.svg" alt="Vector10" >
-        <img class="vector11Desk" src="images/Desktop/Vector 11.svg" alt="Vector11" >
-        <img class="vector12Desk" src="images/Desktop/Vector 12.svg" alt="Vector12" >
+    <div class="background backgroundDesktop">
+        <img class="background rectangle5Desk" src="images/Desktop/Rectangle 5.png" alt="rectangle5" > 
+        <img class="background background_rectangle1_Desk" src="images/Desktop/Rectangle 1.png" alt="rectangle1" >
+        <img class="background background_rectangle2_Desk" src="images/Desktop/Rectangle 2.png" alt="rectangle2" >
+        <img class="background background_rectangle7_Desk" src="images/Desktop/Rectangle 7.png" alt="rectangle7" >
+        <img class="background rectangle8Desk" src="images/Desktop/Rectangle 8.png" alt="rectangle8" >
+        <img class="background rectangle9Desk" src="images/Desktop/Rectangle 9.png" alt="rectangle9" >
+        <img class="background rectangle11Desk" src="images/Desktop/Rectangle 11.png" alt="rectangle11" >
+        <img class="background rectangle14Desk" src="images/Desktop/Rectangle 14.png" alt="rectangle14" >
+        <img class="background rectangle15Desk" src="images/Desktop/Rectangle 15.png" alt="rectangle15" >
+        <img class="background rectangle16Desk" src="images/Desktop/Rectangle 16.png" alt="rectangle16" >
+        <img class="background rectangle17Desk" src="images/Desktop/Rectangle 17.png" alt="rectangle17" >
+        <img class="background rectangle18Desk" src="images/Desktop/Rectangle 18.png" alt="rectangle18" >
+        <img class="background rectangle19Desk" src="images/Desktop/Rectangle 19-1.png" alt="rectangle19" >
+        <img class="background rectangle192Desk" src="images/Desktop/Rectangle 19-2.png" alt="rectangle192" >
+        <img class="background vector8Desk" src="images/Desktop/Vector 8.svg" alt="Vector8" >
+        <img class="background vector9Desk" src="images/Desktop/Vector 9.svg" alt="Vector9" >
+        <img class="background vector10Desk" src="images/Desktop/Vector 10.svg" alt="Vector10" >
+        <img class="background vector11Desk" src="images/Desktop/Vector 11.svg" alt="Vector11" >
+        <img class="background vector12Desk" src="images/Desktop/Vector 12.svg" alt="Vector12" >
         <img class="substractDesk" src="images/Desktop/Subtract.png" alt="substract" >
     </div>
-    <div class="backgroundMobile">
-        <img class="rectangle1Mobile" src="images/Mobile/Rectangle 1.svg" alt="Rectangle1" >
-        <img class="vector13Mobile" src="images/Mobile/Vector 13.svg" alt="Vector13" >
-        <img class="rectangle14Mobile" src="images/Mobile/Rectangle 14.png" alt="rectangle14" >
-        <img class="vector14Mobile" src="images/Mobile/Vector 14.svg" alt="Vector14" >
-        <img class="rectangle182Mobile" src="images/Mobile/Rectangle 18-2.png" alt="rectangle182" >
-        <img class="vector15Mobile" src="images/Mobile/Vector 15.svg" alt="Vector15" >
-        <img class="vector16Mobile" src="images/Mobile/Vector 16.svg" alt="Vector16" >
-        <img class="rectangle183Mobile" src="images/Mobile/Rectangle 18-3.png" alt="rectangle183" >
-        <img class="rectangle184Mobile" src="images/Mobile/Rectangle 18-4.png" alt="rectangle184" >
-        <img class="rectangle201Mobile" src="images/Mobile/Rectangle 20-1.png" alt="rectangle201" >
-        <img class="rectangle19Mobile" src="images/Mobile/Rectangle 19.png" alt="rectangle19" >
+    <div class="background backgroundMobile">
+        <img class="background rectangle1Mobile" src="images/Mobile/Rectangle 1.svg" alt="Rectangle1" >
+        <img class="background vector13Mobile" src="images/Mobile/Vector 13.svg" alt="Vector13" >
+        <img class="background rectangle14Mobile" src="images/Mobile/Rectangle 14.png" alt="rectangle14" >
+        <img class="background vector14Mobile" src="images/Mobile/Vector 14.svg" alt="Vector14" >
+        <img class="background rectangle182Mobile" src="images/Mobile/Rectangle 18-2.png" alt="rectangle182" >
+        <img class="background vector15Mobile" src="images/Mobile/Vector 15.svg" alt="Vector15" >
+        <img class="background vector16Mobile" src="images/Mobile/Vector 16.svg" alt="Vector16" >
+        <img class="background rectangle183Mobile" src="images/Mobile/Rectangle 18-3.png" alt="rectangle183" >
+        <img class="background rectangle184Mobile" src="images/Mobile/Rectangle 18-4.png" alt="rectangle184" >
+        <img class="background rectangle201Mobile" src="images/Mobile/Rectangle 20-1.png" alt="rectangle201" >
+        <img class="background rectangle19Mobile" src="images/Mobile/Rectangle 19.png" alt="rectangle19" >
         <img class="substractDesk" src="images/Desktop/Subtract.png" alt="substract" >
     </div>
     <div class="titleBlock">
@@ -68,8 +68,8 @@
             <p class="teamWeb">Команда <span style="color: green;">Web</span> разработчиков<p>
             <p class="afterWeb">Которые изменят твоё представление о сайтах и помогу тебе сделать продающий сайт</p>  
             <div class="orderButtons">
-                <a href="#"><p class="order">Заказать проект</p></a>
-                <a href="#"><p class="portfolio">Портфолио</p></a>
+                <a href="#"><p class="button button_order_text">Заказать проект</p></a>
+                <a href="#"><p class="button button_portfolio_text">Портфолио</p></a>
                 <a href="#"><img class="orderButton" src="images/Rectangle 4.png" alt="Rectangle4" ></a>
                 <a href="#"><img  src="images/Rectangle 4 Ops.png" alt="Rectangle4ops" ></a>
                 <img class="titleSocials"  src="images/Group 6.png" alt="Group6" >
@@ -79,7 +79,7 @@
             <img class="titleImageBlock"  src="images/Group 1.png" alt="Group1" >
         </div>
     </div>
-    <div class="aboutUsText">
+    <div class="cloud cloud_about_us_text">
         <p><a name="aboutUsLink"></a>О нас</p>
     </div>
     <div class=aboutUsPictures>
@@ -111,7 +111,7 @@
             </div>
         </div> 
     </div>
-    <div class="servicesText">
+    <div class="cloud cloud_services_text">
         <p><a name="servicesLink"></a>Наши услуги</p>
     </div>
     
@@ -133,8 +133,8 @@
                 <li>Работа с СММ специалистом</li>
             </ul>
             <div class="orderButtons1">
-                <p class="order" style="margin-top: 7px;">Заказать проект</p>
-                <p class="portfolio" style="margin-top: 7px;">Портфолио</p>
+                <p class="button button_order_text" style="margin-top: 7px;">Заказать проект</p>
+                <p class="button button_portfolio_text" style="margin-top: 7px;">Портфолио</p>
                 <img class="orderButton" src="images/Rectangle 4.png" alt="Rectangle4" >
                 <img  src="images/Rectangle 4 Ops.png" alt="Rectangle4ops" >
             </div>
@@ -157,8 +157,8 @@
                 <li>Возможность работать с СММ специалистом</li>
             </ul>
             <div class="orderButtons2" style="height: 32px;">
-                <p class="order" style="margin-top: 7px;">Заказать проект</p>
-                <p class="portfolio" style="margin-top: 7px;">Портфолио</p>
+                <p class="button button_order_text" style="margin-top: 7px;">Заказать проект</p>
+                <p class="button button_portfolio_text" style="margin-top: 7px;">Портфолио</p>
                 <img class="orderButtonBlue"  src="images/Rectangle 4blue.png" alt="Rectangle4" >
                 <img  src="images/Rectangle 4green.png" alt="Rectangle4ops" >
             </div>
@@ -185,7 +185,7 @@
             </div>
         </div>
     </div>
-    <div class="ourTeam">
+    <div class="cloud cloud_our_team_text">
         <p><a name="teamLink"></a>Наша команда</p>
     </div>
     <div class="ourTeamProfile">
@@ -205,7 +205,7 @@
             <img src="images/Vector 13-right.svg" alt="Vector13r" >
         </div>
     </div>
-    <div class="portfolio1">
+    <div class="cloud cloud_portfolio_text">
         <p><a name="portfolioLink"></a>Портфолио</p>
     </div>
     <div class="logoPortfolio">
@@ -229,7 +229,7 @@
             </div>
         </div>
     </div>
-    <div class="contactsCloud">
+    <div class="cloud cloud_contacts_text">
         <p><a name="contactLink"></a>Контакты</p>
     </div>
 </body>
